unpackaged/main/default/objects/litify_mktgROI__Monthly_Marketing_Spend__c/litify_mktgROI__Monthly_Marketing_Spend__c.object-meta.xml
<CustomObject>
    <label>Monthly Marketing Spend</label>
    <nameField>
        <displayFormat>MMS-{0000}</displayFormat>
        <label>Monthly Marketing Spend Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monthly Marketing Spends</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>