unpackaged/main/default/objects/litify_mktgROI__Monthly_Marketing_Spend__c/fields/litify_mktgROI__Description__c.field-meta.xml
<CustomField>
    <fullName>litify_mktgROI__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>