unpackaged/main/default/objects/litify_mktgROI__Monthly_Marketing_Spend__c/fields/litify_mktgROI__Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_mktgROI__Lead_Name__c</fullName>
    <formula>Name</formula>
    <label>Lead Name</label>
    <type>Text</type>
</CustomField>