unpackaged/main/default/objects/litify_mktgROI__Monthly_Marketing_Spend__c/fields/litify_mktgROI__Monthly_Marketing_Spend_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_mktgROI__Monthly_Marketing_Spend_Name__c</fullName>
    <formula>litify_mktgROI__Source__r.Name + &quot; - &quot; + TEXT(litify_mktgROI__Monthly_Spend_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Marketing Spend Name</label>
    <type>Text</type>
</CustomField>