unpackaged/main/default/objects/litify_mktgROI__Monthly_Marketing_Spend__c/fields/litify_mktgROI__Monthly_Spend_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_mktgROI__Monthly_Spend_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>