unpackaged/main/default/objects/litify_mktgROI__Monthly_Marketing_Spend__c/fields/litify_mktgROI__Source__c.field-meta.xml
<CustomField>
    <fullName>litify_mktgROI__Source__c</fullName>
    <label>Source</label>
    <referenceTo>litify_pm__Source__c</referenceTo>
    <relationshipLabel>Monthly Marketing Spends</relationshipLabel>
    <relationshipName>Monthly_Marketing_Spends</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>