unpackaged/main/default/objects/litify_mktgROI__Monthly_Marketing_Spend__c/fields/litify_mktgROI__Source_Match__c.field-meta.xml
<CustomField>
    <fullName>litify_mktgROI__Source_Match__c</fullName>
    <formula>TEXT(MONTH( litify_mktgROI__Monthly_Spend_Start_Date__c )) +&quot; &quot;+ TEXT(YEAR(litify_mktgROI__Monthly_Spend_Start_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Match</label>
    <type>Text</type>
</CustomField>