unpackaged/main/default/objects/litify_mktgROI__Monthly_Marketing_Spend__c/fields/litify_mktgROI__Spend__c.field-meta.xml
<CustomField>
    <fullName>litify_mktgROI__Spend__c</fullName>
    <label>Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>