unpackaged/main/default/objects/litify_mktgROI__Monthly_Marketing_Spend__c/listViews/litify_mktgROI__All.listView-meta.xml
<ListView>
    <fullName>litify_mktgROI__All</fullName>
    <columns>litify_mktgROI__Monthly_Marketing_Spend_Name__c</columns>
    <columns>litify_mktgROI__Monthly_Spend_Start_Date__c</columns>
    <columns>litify_mktgROI__Source__c</columns>
    <columns>litify_mktgROI__Spend__c</columns>
    <columns>litify_mktgROI__Description__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>